[tool.poetry]
name = "spark-course"
version = "0.1.0"
description = "Spark Udemy Course"
authors = ["Daniel Holland <danielholland414@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
